# termpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
examples/: CMakeLists.txt  main.cpp  test.cpp
termpp/: CMakeLists.txt  cmd.hpp  cmd_call.hpp  cmd_factory.hpp  commands.hpp  control.hpp  errors.cpp  errors.hpp  keys.cpp  keys.hpp  line.hpp  parse.hpp  term.cpp  term.hpp  utils.hpp
termpp/commands/: CMakeLists.txt  arg.hpp  command.hpp  commands.hpp  convert.hpp
termpp/controls/: CMakeLists.txt  control.hpp  controls.cpp  controls.hpp
termpp/plugins/: README.md
termpp/utils/: CMakeLists.txt  brigand_wrapper.hpp  command_traits.hpp  function_traits.hpp  length.hpp  make_array.hpp  split.hpp  static_unique_pointer_cast.hpp
tests/: CMakeLists.txt  cmd.cpp  cmd_call.cpp  test_blank.cpp
tests/commands/: CMakeLists.txt  command.cpp
